# fstar-mcp

./: Cargo.toml  README.md
src/: main.rs
src/fstar/: config.rs  messages.rs  mod.rs  process.rs  protocol.rs
src/mcp/: mod.rs  tools.rs
src/session/: mod.rs  types.rs
tests/: mcp_client_tests.rs  mock_fstar.rs
